# enterprise-doc-ai-evaluation

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/enterprise_doc_ai_evaluation/: __init__.py  baseline.py  cli.py  dataset.py  evaluator.py  models.py  report.py
tests/: test_evaluator.py
