[project]
name = "enterprise-doc-ai-evaluation"
version = "0.1.0"
description = "Synthetic RAG/GraphRAG answer-quality evaluation harness for enterprise document AI."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Samat Tamabayev", email = "tsamat@gmail.com"}]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
enterprise-doc-ai-eval = "enterprise_doc_ai_evaluation.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
